--- a/c/c2.html
+++ b/c/c2.html
@@ -4,24 +4,26 @@
 	<title>重叠边框，悬浮显示</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		#calc {
+		table {
 			background: #ccc;
-			/*border-spacing: 0;*/
 		}
-		#calc td {
+		td {
+			display: inline-block;
 			width: 50px;
 			height: 50px;
 			border: 10px solid #aaa;
 			color: white;
 			text-align: center;
+			line-height: 50px;
 		}
-		#calc td:hover {
+		td:hover {
 			border-color:#666;
 		}
+		
 	</style>
 </head>
 <body>
-	<table id="calc" cellpadding="0" cellspacing="0">
+	<table cellspacing="0">
 		<tr>
 			<td>1</td>
 			<td>2</td>
@@ -40,10 +42,7 @@
 	</table>
 
 	<pre>
-		要牢记：table默认给每个单元分配了 padding 和 margin
-		想要去除单元之间的空隙：
-		1.在HTML标签中使用cellpadding和cellspacing属性控制
-		2.在CSS中，使用border-spacing
+		td为默认的display为table-cell，修改为内联块元素，然后需要对文本进行垂直居中。
 	</pre>
 </body>
 </html>
