white-space word-break word-wrap

--- a/h/h1.html
+++ b/h/h1.html
@@ -28,6 +28,12 @@
 	</style>
 </head>
 <body>
+	<pre>
+		white-space: 空白符如何处理
+		word-break: 单词拆开的规则
+		word-wrap: 单词何时换行
+	</pre>
+
 	<div id="box1">
 		Hi&nbsp;&nbsp;,
 		This   is a incomprehensibilities long word.
