--- a/s.html
+++ b/s.html
@@ -1,77 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>text和html获取了什么内容</title>
+	<title>text和html的区别</title>
 	<meta charset="utf-8">
 </head>
 <body>
-	<div>
-		&lt;p&gt;段落&lt;p/&gt;
-	</div>
+
+	<pre>
+		明白字符实体的作用，为了在HTML中显示HTML标签，
+		想要在HTML页面中显示HTML标签需要使用字符实体
+	</pre>
+
 	<div>
 		<p>段落</p>
+		&lt;p&gt;段落&lt;/p&gt;
 	</div>
+	
+	<pre>
+		元素的innerHTML属性
+			1. 可读可写
+			2. 读 读取元素的HTML内容，HTML源码是什么，就返回什么
+			3. 写 相当于修改了元素内的HTML代码，和直接在HTML代码中写一样的效果
+	</pre>
+	<div></div>
 
 	<pre>
-		初始化：
-			字符实体
-		获取：
-			innerHTML，里面是什么就返回什么，字符实体原样返回
-			innerText，忽略标签，但是会转换字符实体
-			没有value
+		元素的innerText属性
+			1. 可读可写
+			2. 读 读取元素的文本内容，忽略HTML标签，注意实体字符属于文本
+			3. 写 原样显示字符串的内容
 	</pre>
-
-	<textarea>
-		&lt;p&gt;段落&lt;p/&gt;
-	</textarea>
-	<textarea>
-		<p>段落<p/>
-	</textarea>
+	<div></div>
 
 	<pre>
-		textarea:
-		value获取的是html代码
+		需要注意:
+		写innerText属性和innerHTML属性的区别：
+			1. innerHTML内容 浏览器当作正常的HTML代码处理
+			2. innerText内容 浏览器不做处理，原样显示
+		读innerText属性和innerHTML属性的区别：
+			1. innerHTML内容 原样返回HTML代码
+			2. innerText内容 忽略HTML标签
 	</pre>
 
-	<input value="&lt;p&gt;段落&lt;p/&gt;" />
-	<input value="<p>段落<p/>" />
-
-	
-	
 
 	<script type="text/javascript">
 		var ds = document.getElementsByTagName('div'),
 			d1 = ds[0],
-			d2 = ds[1]
+			d2 = ds[1],
+			d3 = ds[2]
 
-		var tas = document.getElementsByTagName('textarea'),
-			ta1 = tas[0],
-			ta2 = tas[1]
-
-		var is = document.getElementsByTagName('input'),
-			is1 = is[0],
-			is2 = is[1]
+		console.log(d1.innerHTML)
+		d2.innerHTML = `<p>段落</p>&lt;p&gt;段落&lt;/p&gt;`
 
 		console.log(d1.innerText)
-		console.log(d1.innerHTML)
-
-		console.log(d2.innerText)
-		console.log(d2.innerHTML)
-
-		console.log(ta1.value)
-		console.log(ta1.innerHTML)
-
-		console.log(ta2.value)
-		console.log(ta2.innerHTML)
-
-		console.log(is1.value)
-		console.log(is1.innerHTML)
-
-		console.log(is2.value)
-		console.log(is2.innerHTML)
-
-		
-
+		d3.innerText = `<p>段落</p>&lt;p&gt;段落&lt;/p&gt;`
 	</script>
 </body>
 </html>
