延迟脚本 异步脚本

--- a/v/v5.html
+++ b/v/v5.html
@@ -3,8 +3,8 @@
 <head>
 	<title>ifr</title>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="./hello.js" defer></script>
-	<script type="text/javascript" src="./hello1.js" async></script>
+	<script type="text/javascript" src="./hello1.js" defer></script>
+	<script type="text/javascript" src="./hello2.js" async></script>
 </head>
 <body>
 	<script type="text/javascript">
