传统居中到flex居中

--- a/d/d.html
+++ b/d/d.html
@@ -35,7 +35,7 @@
 		内联元素会有左右间隙和下面的间隙：
 		1.左右是由于回车换行引起的。
 		2.下面是由于内联元素有四条线，topline, middleline, baseline, bottomline
-			默认情况下，图片占据的文职是topline到baseline。
+			默认情况下，图片占据的位置是topline到baseline。
 			因此，这个间隙就是baseline和bottomline之间的空白。
 	</pre>
 	<p>
