--- a/y/y.html
+++ b/y/y.html
@@ -17,7 +17,7 @@
     后端：
       通过reponse返回流
     前端：
-      通过blob对象实现下载
+      通过blob对象实现下载 blobURL
       https://blog.csdn.net/aydongzhiping/article/details/82462473
 
     简书上的好文章
