努力把借助这块把前后端通信搞透

--- a/y/y.html
+++ b/y/y.html
@@ -20,6 +20,8 @@
       通过blob对象实现下载 blobURL
       https://blog.csdn.net/aydongzhiping/article/details/82462473
 
+    用axios请求，图片就出错？？
+
     简书上的好文章
     https://www.jianshu.com/p/cd3fee40ef59
   </pre>
