闭包的深刻理解

--- a/面试总结.html
+++ b/面试总结.html
@@ -760,6 +760,17 @@
 		当函数执行完毕的时候，执行上下文会退栈，
 		但是，变量对象不一定退栈(典型的就是闭包，变量对象被引用，不会清除)
 
+		执行上下文：
+			1. 创建
+				1. 创建变量对象
+					也分为三个步骤，也是存在变量提升现象的原因
+				2. 建立作用域链
+					作用域链根据嵌套，内层可以访问外层，会在作用域链内部属性上保留对外层变量对象的引用
+				3. 确定this指向
+			2. 执行
+				变量对象变为活动对象
+				顺序执行代码(这个顺序是变量提升后的顺序)
+
 		变量对象的创建过程要牢记：
 		1.创建阶段 完美解答变量提升的问题
 			1. 创建arguments对象
@@ -767,11 +778,40 @@
 			3. 在变量对象中添加变量声明的属性 值为undefined （如果和函数同名则跳过）
 
 		2.执行阶段 这里 变量对象转变为活动对象
-			1. this在执行时才绑定
-			2. 顺序执行代码，这里才能给局部变量赋值
 
 
 		要很好的区分函数调用栈和作用域链。
+
+
+		闭包经典面试题：
+		for (var i=1; i<=5; i++) {
+		    setTimeout( function timer() {
+		        console.log(i);
+		    }, i*1000 );
+		}
+
+		原因在于，timer执行的时候，i变成了6 总是错误的认为setTimeout有闭包，
+		其实没有。
+
+		有两种解决方法：
+		1.闭包+立即执行的函数，通过立即执行函数在循环的时候把值绑定到闭包中
+		2.利用let 原理其实一样 因为let在循环过后会销魂，因此,使用let的话
+			timer其实是闭包 相当于自动实现了1
+
+		for (var i=1; i<=5; i++) {
+			(function(i){
+				setTimeout( function timer() {
+			        console.log(i);
+			    }, i*1000 );
+			})(i)
+		}
+		for (var i=1; i<=5; i++) {
+		    setTimeout( (function(i) {
+		    	return function() {
+		    		console.log(i)
+		    	}
+		    })(i), i*1000 );
+		}
 	</pre>
 </body>
 </html>
