--- a/r.html
+++ b/r.html
@@ -25,12 +25,21 @@
 			没有arguments，this是词法作用域，通俗理解为:this继承定义它的父级的this
 			如果在函数中定义，那么继承这个函数的this
 
-		最最重要的思想：
+		关于箭头函数最重要的思想：
 			前述的匿名函数全局性的缺陷，要用var that = this
 			但是，箭头函数继承父级this，因此，不用做这个操作，直接使用this即可
 			使用场景：
 			1. 回调函数经常需要使用父级的this, 箭头函数用起来很方便
 			2. 对象的方法，对象的方法往往要使用自己的this，因此用普通函数更好
+
+		关于严格模式最重要的思想：
+			正式开发中大多使用严格模式，并且ES6默认使用严格模式。
+			严格模式中，匿名函数(也就是独立调用)全局性表现在this指向undefined，因为没有人调用它。
+			只有在非严格模式下，this会被自动指向window
+
+		关于setTimeout的思想：
+			setTimeout中的函数并没有调用，而是在代码执行完成后，再调用，因此属于独立调用，
+			需要考虑绑定绑定this，使用var that = this，闭包，或者ES5的bind都可以
 	</pre>
 	
 	<script type="text/javascript">
