函数柯里化的应用场景

--- a/y.html
+++ b/y.html
@@ -11,6 +11,11 @@
 			意义：创建一个函数固定下某些参数的版本，这样在调用的时候就可以省去那些参数
 		实现思路：
 			拼接函数参数，Array.concat
+		使用场景：
+			标准会为我们提供很多通用的函数，这样的考虑是为了让函数更加通用。
+			比如说数组的map方法，在使用时需要传入一个函数。
+			假设项目在多处地方都需要调用同一个map方法并传入同样的函数，
+			那么就可以考虑用柯里化封装，简化我们的调用。
 	</pre>
 
 	<script type="text/javascript">
