验证性技巧

--- a/y.html
+++ b/y.html
@@ -16,6 +16,11 @@
 			比如说数组的map方法，在使用时需要传入一个函数。
 			假设项目在多处地方都需要调用同一个map方法并传入同样的函数，
 			那么就可以考虑用柯里化封装，简化我们的调用。
+
+		注意：
+			并不是说，只有柯里化的做法才能封装：
+			其实，最直接的思路应该是直接写一个函数，把调用的函数写死，执行map即可。
+			这种做法的缺点在于，假设我需要封装两个函数，那么势必又要重复这个过程。
 	</pre>
 
 	<script type="text/javascript">
