new关键字和能力检车

--- a/ac.html
+++ b/ac.html
@@ -43,7 +43,7 @@
 	</script>
 
 	<pre>
-		要区分new操作符和我们写的New函数的区别。
+		要区分new关键字和我们写的New函数的区别。
 		new操作符 可以得到它的操作数，这种语言级别的能力，我们是没办法通过函数去实现的。
 	</pre>
 </body>
