vue-cli和vue-router

--- a/面试总结.html
+++ b/面试总结.html
@@ -830,6 +830,13 @@
 				}
 			}
 		}
+
+		react组件化开发心得。
+		先了解create-react-app项目结构了解清楚:
+		1. public里的html文件是入口html 名字要和src目录下的js文件一致
+		2. src目录下的js文件和css文件就是正常的js和css， 导入组件的目录即可在js文件中通过ReactDOM.render()渲染
+		3. 写好的组件建一个components目录，也放在src目录下，每个组件需要有自己的.jsx和.scss
+			当然，.js和.css也行
 	</pre>
 </body>
 </html>
