--- a/面试总结.html
+++ b/面试总结.html
@@ -644,6 +644,13 @@
 			1. 对象要有唯一标志，状态，行为。 c++成员变量，成员方法 java属性，方法
 			2. js只用属性。 所以属性会有一组特征值[[私有属性]]来描述。属性分为数据属性和访问器属性。
 
+		网格布局和弹性布局的区别？
+				对弹性布局要有正确的认识，弹性布局是一维布局，网格布局是二维布局。
+				虽然弹性布局听起来好像特别复杂，但事实上，弹性布局是一维的，所谓一维，
+				就是只能按行或者列控制布局(设置flex-wrap: wrap;就可以换行，蔓延成二维)
+
+				网格布局是二维的，可以同时控制行和列
+
 
 		腾讯：
 			异步请求有哪些方式？
