手机尺寸适配方案

--- a/af/index.html
+++ b/af/index.html
@@ -19,7 +19,7 @@
 		一般方式：
 		export 变量或函数声明
 		import {变量或函数对应的名字} from '模块'
-		需要注意的是，事实上这种到处方式应该也是导出了一个对象，然后导入的时候借助解构赋值去赋值
+		需要注意的是，事实上这种导出方式应该也是导出了一个对象，然后导入的时候借助解构赋值去赋值
 
 		两种方式可以混用
 	</pre>
