--- a/ae.html
+++ b/ae.html
@@ -40,6 +40,8 @@
 
 		4. process.nextTick会比Promise先执行，和宏任务的顺序不一样。
 
+		5. setTimeout的第二个参数 是在延迟后才把任务放进宏任务队列 所以在时间到之前 没有进宏任务队列
+
 	</pre>
 
 	<script type="text/javascript">
