--- a/q/q3.html
+++ b/q/q3.html
@@ -13,13 +13,13 @@
 		div {
 			width: 100px;
 			height: 100px;
-			animation: myAnimation 5s linear 2s 3 alternate;
+			animation: myAnimation 5s ease-out 2s 3 alternate;
 		}
 	</style>
 </head>
 <body>
 	<pre>
-		1. 使用@keyframe规则来创建动画
+		1. 使用@keyframes规则来创建动画
 		2. 在要应用动画的选择器中 添加animation属性 指定上述动画
 
 		需要注意，动画不会影响元素本身的属性，也就是说100%处指定的属性，
